# unclutter-xfixes

./: .gitignore  .travis.yml  DEPENDENCIES  LICENSE  Makefile  Makefile.am  README.md  configure.ac  unclutter
include/: Makefile.am  all.h  cursor.h  event.h  extensions.h  externals.h  globals.h  types.h  util.h
man/: Makefile.am  unclutter-xfixes.man  unclutter.man
src/: Makefile.am  cursor.c  event.c  extensions.c  unclutter.c  util.c
